--- a/src/app/gamecontrol/gamecontrol.component.html
+++ b/src/app/gamecontrol/gamecontrol.component.html
@@ -1,3 +1,5 @@
-<button class="btn btn-success" (click)="onStart()">Start Game</button>
+<div class="control">
+    <button class="btn btn-success" (click)="onStart()">Start Game</button>
 <button class="btn btn-danger" (click)="onPause()">Pause Game</button>
+</div>
 <h1 class="bg-info" style="width: 200px; border-radius: 150px; padding: 10px;">{{numberFired}}</h1>
